...
                tint: .secondary
            ) {
                AboutSettingsView()
            }

        }
        .navigationTitle("Settings")
        .navigationBarTitleDisplayMode(.inline)
    }
}

